Fixed delombok not generating output files Completed modularization of the project